# vish_agent

./: .env.example  .gitignore  README.md  eval_prompts.json  pyproject.toml  requirements.txt
scripts/: download_model.py  run_cli.py  run_evaluation.py
src/vish_agent/: config.py  logging_utils.py  pipeline.py  prompts.py  schemas.py  session.py
src/vish_agent/evaluation/: dataset.py  harness.py
src/vish_agent/layers/: input_layer.py  orchestrator.py  response_generator.py  tool_executor.py
src/vish_agent/llm/: client.py
src/vish_agent/tools/: base.py  ip_api.py  registry.py  tavily_search.py  weather.py
tests/: conftest.py  test_evaluation.py  test_input_layer.py  test_orchestrator.py  test_pipeline.py  test_response_generator.py  test_session.py  test_tool_executor.py  test_tools.py
